general axisymmetric element: internal pressure on a cylinder.

--- a/source/TwoD/Axissymmetric/general_axissymmetric.ipynb
+++ b/source/TwoD/Axissymmetric/general_axissymmetric.ipynb
@@ -6,13 +6,13 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-07-28T04:05:57.754071Z",
-     "start_time": "2025-07-28T04:05:57.750348Z"
+     "end_time": "2025-07-28T05:27:49.116180Z",
+     "start_time": "2025-07-28T05:27:49.110211Z"
     }
    },
    "source": "### General Axissymmetric element",
    "outputs": [],
-   "execution_count": 153
+   "execution_count": 217
   },
   {
    "metadata": {},
@@ -56,8 +56,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-28T04:05:58.493256Z",
-     "start_time": "2025-07-28T04:05:58.483579Z"
+     "end_time": "2025-07-28T05:27:49.643236Z",
+     "start_time": "2025-07-28T05:27:49.637052Z"
     }
    },
    "cell_type": "code",
@@ -68,7 +68,7 @@
    ],
    "id": "58d7ada50a52fb0f",
    "outputs": [],
-   "execution_count": 154
+   "execution_count": 218
   },
   {
    "metadata": {},
@@ -79,8 +79,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-28T04:05:59.296307Z",
-     "start_time": "2025-07-28T04:05:59.288845Z"
+     "end_time": "2025-07-28T05:27:50.196026Z",
+     "start_time": "2025-07-28T05:27:50.189635Z"
     }
    },
    "cell_type": "code",
@@ -96,13 +96,13 @@
    ],
    "id": "55a75e5d8a36c88b",
    "outputs": [],
-   "execution_count": 155
+   "execution_count": 219
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-28T04:05:59.970724Z",
-     "start_time": "2025-07-28T04:05:59.947414Z"
+     "end_time": "2025-07-28T05:27:50.745650Z",
+     "start_time": "2025-07-28T05:27:50.727308Z"
     }
    },
    "cell_type": "code",
@@ -152,7 +152,7 @@
     "    #                    'P4': (0.11, 0, 0.04),\n",
     "    #                    }  # example coordinates for the nodes\n",
     "\n",
-    "    # cylinder, di=1m, h=1m, t=10 mm\n",
+    "    # cylinder, di=1000mm, h=1000mm, t=10 mm\n",
     "    physical_coords = {'P1': (1000, 0, 0),\n",
     "                       'P2': (1010, 0, 0),\n",
     "                       'P3': (1010, 0, 1000),\n",
@@ -209,13 +209,13 @@
    ],
    "id": "90f7d9b38ac2b675",
    "outputs": [],
-   "execution_count": 156
+   "execution_count": 220
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-28T04:06:01.090678Z",
-     "start_time": "2025-07-28T04:06:01.038221Z"
+     "end_time": "2025-07-28T05:27:51.317934Z",
+     "start_time": "2025-07-28T05:27:51.280292Z"
     }
    },
    "cell_type": "code",
@@ -343,7 +343,7 @@
      ]
     }
    ],
-   "execution_count": 157
+   "execution_count": 221
   },
   {
    "metadata": {},
@@ -365,8 +365,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-28T04:06:02.073370Z",
-     "start_time": "2025-07-28T04:06:02.003169Z"
+     "end_time": "2025-07-28T05:27:51.882596Z",
+     "start_time": "2025-07-28T05:27:51.822345Z"
     }
    },
    "cell_type": "code",
@@ -455,7 +455,7 @@
      ]
     }
    ],
-   "execution_count": 158
+   "execution_count": 222
   },
   {
    "metadata": {},
@@ -466,8 +466,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-28T04:06:02.668498Z",
-     "start_time": "2025-07-28T04:06:02.631692Z"
+     "end_time": "2025-07-28T05:27:52.463080Z",
+     "start_time": "2025-07-28T05:27:52.421970Z"
     }
    },
    "cell_type": "code",
@@ -548,7 +548,7 @@
      ]
     }
    ],
-   "execution_count": 159
+   "execution_count": 223
   },
   {
    "metadata": {},
@@ -682,8 +682,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-28T04:06:03.336745Z",
-     "start_time": "2025-07-28T04:06:03.261441Z"
+     "end_time": "2025-07-28T05:27:53.044Z",
+     "start_time": "2025-07-28T05:27:52.976408Z"
     }
    },
    "cell_type": "code",
@@ -759,7 +759,7 @@
      ]
     }
    ],
-   "execution_count": 160
+   "execution_count": 224
   },
   {
    "metadata": {},
@@ -770,8 +770,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-28T04:06:04.235133Z",
-     "start_time": "2025-07-28T04:06:04.175031Z"
+     "end_time": "2025-07-28T05:27:53.602141Z",
+     "start_time": "2025-07-28T05:27:53.540201Z"
     }
    },
    "cell_type": "code",
@@ -830,7 +830,7 @@
      ]
     }
    ],
-   "execution_count": 161
+   "execution_count": 225
   },
   {
    "metadata": {},
@@ -845,8 +845,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-28T04:06:05.202226Z",
-     "start_time": "2025-07-28T04:06:05.092349Z"
+     "end_time": "2025-07-28T05:27:54.162045Z",
+     "start_time": "2025-07-28T05:27:54.096626Z"
     }
    },
    "cell_type": "code",
@@ -895,7 +895,7 @@
      ]
     }
    ],
-   "execution_count": 162
+   "execution_count": 226
   },
   {
    "metadata": {},
@@ -920,8 +920,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-28T04:06:06.590134Z",
-     "start_time": "2025-07-28T04:06:06.555644Z"
+     "end_time": "2025-07-28T05:27:54.872168Z",
+     "start_time": "2025-07-28T05:27:54.779179Z"
     }
    },
    "cell_type": "code",
@@ -973,7 +973,7 @@
      ]
     }
    ],
-   "execution_count": 163
+   "execution_count": 227
   },
   {
    "metadata": {},
@@ -984,8 +984,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-28T04:06:07.227820Z",
-     "start_time": "2025-07-28T04:06:07.216735Z"
+     "end_time": "2025-07-28T05:27:55.541459Z",
+     "start_time": "2025-07-28T05:27:55.528324Z"
     }
    },
    "cell_type": "code",
@@ -1035,7 +1035,7 @@
    ],
    "id": "5c6ea5f8ac41f0a3",
    "outputs": [],
-   "execution_count": 164
+   "execution_count": 228
   },
   {
    "metadata": {},
@@ -1077,8 +1077,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-28T04:06:07.784159Z",
-     "start_time": "2025-07-28T04:06:07.772849Z"
+     "end_time": "2025-07-28T05:27:56.244420Z",
+     "start_time": "2025-07-28T05:27:56.233694Z"
     }
    },
    "cell_type": "code",
@@ -1128,13 +1128,13 @@
    ],
    "id": "d58489028536806",
    "outputs": [],
-   "execution_count": 165
+   "execution_count": 229
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-28T04:06:08.793258Z",
-     "start_time": "2025-07-28T04:06:08.353800Z"
+     "end_time": "2025-07-28T05:27:57.267543Z",
+     "start_time": "2025-07-28T05:27:56.810071Z"
     }
    },
    "cell_type": "code",
@@ -1281,13 +1281,13 @@
      ]
     }
    ],
-   "execution_count": 166
+   "execution_count": 230
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-28T04:06:09.420338Z",
-     "start_time": "2025-07-28T04:06:09.407473Z"
+     "end_time": "2025-07-28T05:27:57.922224Z",
+     "start_time": "2025-07-28T05:27:57.908051Z"
     }
    },
    "cell_type": "code",
@@ -1357,13 +1357,13 @@
    ],
    "id": "670350b18e95c889",
    "outputs": [],
-   "execution_count": 167
+   "execution_count": 231
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-28T04:06:10.191107Z",
-     "start_time": "2025-07-28T04:06:10.032414Z"
+     "end_time": "2025-07-28T05:27:58.685034Z",
+     "start_time": "2025-07-28T05:27:58.527588Z"
     }
    },
    "cell_type": "code",
@@ -1486,7 +1486,7 @@
      ]
     }
    ],
-   "execution_count": 168
+   "execution_count": 232
   },
   {
    "metadata": {},
@@ -1497,8 +1497,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-28T04:06:10.781063Z",
-     "start_time": "2025-07-28T04:06:10.774154Z"
+     "end_time": "2025-07-28T05:27:59.285619Z",
+     "start_time": "2025-07-28T05:27:59.279586Z"
     }
    },
    "cell_type": "code",
@@ -1514,7 +1514,7 @@
    ],
    "id": "4dbdc8e59e4d47be",
    "outputs": [],
-   "execution_count": 169
+   "execution_count": 233
   },
   {
    "metadata": {},
@@ -1567,8 +1567,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-28T04:06:11.342228Z",
-     "start_time": "2025-07-28T04:06:11.332991Z"
+     "end_time": "2025-07-28T05:27:59.991392Z",
+     "start_time": "2025-07-28T05:27:59.983545Z"
     }
    },
    "cell_type": "code",
@@ -1641,7 +1641,7 @@
    ],
    "id": "377e8ff0c20f722b",
    "outputs": [],
-   "execution_count": 170
+   "execution_count": 234
   },
   {
    "metadata": {},
@@ -1652,8 +1652,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-28T04:10:27.246511Z",
-     "start_time": "2025-07-28T04:10:27.230382Z"
+     "end_time": "2025-07-28T05:28:00.698040Z",
+     "start_time": "2025-07-28T05:28:00.666801Z"
     }
    },
    "cell_type": "code",
@@ -1695,8 +1695,8 @@
     "                r=float(r_gp),\n",
     "                z=float(z_gp),\n",
     "                inner_radius=float(r_gp),\n",
-    "                fluid_level_H=100000000.0,  # Fluid level height\n",
-    "                fluid_gamma=1e-5,     # Specific weight of water in MPa\n",
+    "                fluid_level_H=100000.0,  # Fluid level height\n",
+    "                fluid_gamma=1e-5  # 9.81e-6,     # Specific weight of water in N/mm3\n",
     "            )\n",
     "\n",
     "            print('p_vector.T:', p_vector.T)\n",
@@ -1736,24 +1736,24 @@
      "output_type": "stream",
      "text": [
       "Element Force Vector (F_element):\n",
-      "p_vector.T: [[999.992113   0.         0.      ]]\n",
-      "p_vector.T: [[999.997887   0.         0.      ]]\n",
-      "[[3.14157171e+09] \n",
-      " [0.00000000e+00] \n",
-      " [0.00000000e+00] \n",
-      " [0.00000000e+00] \n",
-      " [0.00000000e+00] \n",
-      " [0.00000000e+00] \n",
-      " [0.00000000e+00] \n",
-      " [0.00000000e+00] \n",
-      " [0.00000000e+00] \n",
-      " [3.14158218e+09] \n",
-      " [0.00000000e+00] \n",
-      " [0.00000000e+00]]\n"
+      "p_vector.T: [[0.992113 0.       0.      ]]\n",
+      "p_vector.T: [[0.997887 0.       0.      ]]\n",
+      "[[3120647.80050989] \n",
+      " [      0.        ] \n",
+      " [      0.        ] \n",
+      " [      0.        ] \n",
+      " [      0.        ] \n",
+      " [      0.        ] \n",
+      " [      0.        ] \n",
+      " [      0.        ] \n",
+      " [      0.        ] \n",
+      " [3131121.5801338 ] \n",
+      " [      0.        ] \n",
+      " [      0.        ]]\n"
      ]
     }
    ],
-   "execution_count": 181
+   "execution_count": 235
   },
   {
    "metadata": {},
@@ -1764,8 +1764,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-28T04:14:47.497668Z",
-     "start_time": "2025-07-28T04:14:46.641970Z"
+     "end_time": "2025-07-28T05:28:01.820467Z",
+     "start_time": "2025-07-28T05:28:01.377302Z"
     }
    },
    "cell_type": "code",
@@ -1815,18 +1815,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "p_vector.T: [[999.992113   0.         0.      ]]\n",
-      "p_vector.T: [[999.997887   0.         0.      ]]\n",
-      "[[ 4.59256902e-04] \n",
+      "p_vector.T: [[0.992113 0.       0.      ]]\n",
+      "p_vector.T: [[0.997887 0.       0.      ]]\n",
+      "[[ 4.54669068e-07] \n",
       " [ 0.00000000e+00] \n",
       " [ 0.00000000e+00] \n",
-      " [ 4.57284729e-04] \n",
+      " [ 4.52716599e-07] \n",
       " [ 0.00000000e+00] \n",
-      " [ 1.15925712e-07] \n",
-      " [ 4.57289302e-04] \n",
+      " [ 6.95686638e-11] \n",
+      " [ 4.57289112e-07] \n",
       " [-0.00000000e+00] \n",
-      " [-1.16017359e-07] \n",
-      " [ 4.59261494e-04] \n",
+      " [-1.61215846e-10] \n",
+      " [ 4.59261306e-07] \n",
       " [-0.00000000e+00] \n",
       " [ 0.00000000e+00]]\n",
       "\n",
@@ -1834,7 +1834,7 @@
      ]
     }
    ],
-   "execution_count": 183
+   "execution_count": 236
   },
   {
    "metadata": {},
@@ -1845,8 +1845,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-28T04:14:53.640906Z",
-     "start_time": "2025-07-28T04:14:53.473310Z"
+     "end_time": "2025-07-28T05:28:02.528128Z",
+     "start_time": "2025-07-28T05:28:02.376683Z"
     }
    },
    "cell_type": "code",
@@ -1894,25 +1894,25 @@
       "Stresses are:\n",
       "\n",
       "Gauss point (s, t): -0.5774, -0.5774\n",
-      "epsilon: Matrix([[-1.97217699231917e-7], [4.57873664368253e-7], [-4.90095709459687e-11], [0], [0], [6.69620217662936e-9]])\n",
-      "sigma: Matrix([[-271.151162749972], [100512.135544968], [30062.4934004764], [0], [0], [515.092475125335]])\n",
+      "epsilon: Matrix([[-1.95663705422550e-10], [4.54266106279849e-10], [-4.87647669150739e-14], [0], [0], [6.66845968632272e-12]])\n",
+      "sigma: Matrix([[-0.268996669963512], [99.7202051304056], [29.8256095847496], [0], [0], [0.512958437409440]])\n",
       "\n",
       "Gauss point (s, t): -0.5774, 0.5774\n",
-      "epsilon: Matrix([[-1.97218838138838e-7], [4.57876307935806e-7], [-4.90095709459687e-11], [0], [0], [-6.69619075484360e-9]])\n",
-      "sigma: Matrix([[-271.152764511055], [100512.715862357], [30062.6670151647], [0], [0], [-515.091596526431]])\n",
+      "epsilon: Matrix([[-1.96802611592928e-10], [4.56909672041587e-10], [-4.87647669150739e-14], [0], [0], [-6.65703790798093e-12]])\n",
+      "sigma: Matrix([[-0.270598435633835], [100.300522123522], [29.9992241529835], [0], [0], [-0.512079839075456]])\n",
       "\n",
       "Gauss point (s, t): 0.5774, -0.5774\n",
-      "epsilon: Matrix([[-1.97217699231917e-7], [4.54120765944692e-7], [-1.82933500260698e-10], [0], [0], [6.69619078756011e-9]])\n",
-      "sigma: Matrix([[-719.630665004837], [99486.2870544735], [29593.4102167885], [0], [0], [515.091599043086]])\n",
+      "epsilon: Matrix([[-1.95663705422550e-10], [4.50542777441626e-10], [-1.82019742858111e-13], [0], [0], [6.65707062461889e-12]])\n",
+      "sigma: Matrix([[-0.713987110059543], [98.7023948690445], [29.3601183791239], [0], [0], [0.512082355739914]])\n",
       "\n",
       "Gauss point (s, t): 0.5774, 0.5774\n",
-      "epsilon: Matrix([[-1.97218838138838e-7], [4.54123387843142e-7], [-1.82933500260698e-10], [0], [0], [-6.69620214391287e-9]])\n",
-      "sigma: Matrix([[-719.634767047088], [99486.8615378730], [29593.5813311956], [0], [0], [-515.092472608682]])\n",
+      "epsilon: Matrix([[-1.96802611592928e-10], [4.53164674114532e-10], [-1.82019742858111e-13], [0], [0], [-6.66842696968478e-12]])\n",
+      "sigma: Matrix([[-0.718089155210544], [99.2768778767064], [29.5312326678771], [0], [0], [-0.512955920744983]])\n",
       "None\n"
      ]
     }
    ],
-   "execution_count": 184
+   "execution_count": 237
   }
  ],
  "metadata": {
