--- a/source/TwoD/Axissymmetric/isoparametric_axissymmetric.ipynb
+++ b/source/TwoD/Axissymmetric/isoparametric_axissymmetric.ipynb
@@ -16,8 +16,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-07-27T19:37:24.403023Z",
-     "start_time": "2025-07-27T19:37:24.397667Z"
+     "end_time": "2025-08-02T20:33:55.808691Z",
+     "start_time": "2025-08-02T20:33:55.801435Z"
     }
    },
    "source": [
@@ -26,7 +26,7 @@
     "sp.init_printing()"
    ],
    "outputs": [],
-   "execution_count": 64
+   "execution_count": 37
   },
   {
    "metadata": {},
@@ -55,30 +55,30 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-27T19:37:24.610162Z",
-     "start_time": "2025-07-27T19:37:24.603880Z"
+     "end_time": "2025-08-02T20:33:55.857156Z",
+     "start_time": "2025-08-02T20:33:55.851578Z"
     }
    },
    "cell_type": "code",
    "source": [
     "ND = 2  # number of degrees of freedom per node\n",
-    "NNODE = 4  # number of nodes\n",
-    "if NNODE == 3:\n",
+    "NNODE = 3  # number of nodes\n",
+    "if NNODE == 3:  # 3-node triangular element\n",
     "    NGS = [1, 3]  # number of Gauss points, can be 1, 3\n",
-    "elif NNODE == 4:\n",
+    "elif NNODE == 4:  # 4-node quadrilateral isoparametric element\n",
     "    NGS = [1, 4]  # number of Gauss points, can be 1, 2, 3, 4, 5, or 6\n",
     "else:\n",
     "    raise ValueError(\"Unsupported number of nodes. Only 3 or 4 nodes are supported\")\n"
    ],
    "id": "22782e538a273616",
    "outputs": [],
-   "execution_count": 65
+   "execution_count": 38
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-27T19:37:24.809254Z",
-     "start_time": "2025-07-27T19:37:24.796007Z"
+     "end_time": "2025-08-02T20:33:55.920816Z",
+     "start_time": "2025-08-02T20:33:55.905071Z"
     }
    },
    "cell_type": "code",
@@ -99,6 +99,8 @@
     "    # physical_coords = {'P1': (0, 0),\n",
     "    #                    'P2': (1, 0),\n",
     "    #                    'P3': (0, 1)}  # example coordinates for the nodes\n",
+    "\n",
+    "    # Example 13.3 from the Szekrényes-book\n",
     "    physical_coords = {'P1': (3, 0),\n",
     "                       'P2': (4, 0),\n",
     "                       'P3': (3, 1)}  # example coordinates for the nodes\n",
@@ -152,7 +154,7 @@
    ],
    "id": "643385d13f951946",
    "outputs": [],
-   "execution_count": 66
+   "execution_count": 39
   },
   {
    "metadata": {},
@@ -163,8 +165,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-27T19:37:25.001374Z",
-     "start_time": "2025-07-27T19:37:24.994539Z"
+     "end_time": "2025-08-02T20:33:55.971432Z",
+     "start_time": "2025-08-02T20:33:55.965392Z"
     }
    },
    "cell_type": "code",
@@ -181,7 +183,7 @@
    ],
    "id": "7cdadabf1b8538b3",
    "outputs": [],
-   "execution_count": 67
+   "execution_count": 40
   },
   {
    "metadata": {},
@@ -192,8 +194,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-27T19:37:25.248866Z",
-     "start_time": "2025-07-27T19:37:25.201113Z"
+     "end_time": "2025-08-02T20:33:56.048917Z",
+     "start_time": "2025-08-02T20:33:56.024959Z"
     }
    },
    "cell_type": "code",
@@ -202,13 +204,13 @@
     "def shape_functions() -> sp.Matrix:\n",
     "    \"\"\"shape functions\"\"\"\n",
     "\n",
-    "    if NNODE == 3:\n",
+    "    if NNODE == 3:  # non-isoparametric triangular element\n",
     "        return sp.Matrix([\n",
     "            1 - R - Z,\n",
     "            R,\n",
     "            Z,\n",
     "        ])\n",
-    "    elif NNODE == 4:\n",
+    "    elif NNODE == 4:  # isoparametric quadrilateral element\n",
     "        return sp.Matrix([\n",
     "            0.25 * (1 - R) * (1 - Z),\n",
     "            0.25 * (1 + R) * (1 - Z),\n",
@@ -290,35 +292,33 @@
      "text": [
       "\n",
       "The shape functions are:\n",
-      "Matrix([[(0.25 - 0.25*R)*(1 - Z)], [(1 - Z)*(0.25*R + 0.25)], [(0.25*R + 0.25)*(Z + 1)], [(0.25 - 0.25*R)*(Z + 1)]])\n",
+      "Matrix([[-R - Z + 1], [R], [Z]])\n",
       "\n",
       "The derivatives are:\n",
-      "dN1/ds = 0.25*Z - 0.25\n",
-      "dN2/ds = 0.25 - 0.25*Z\n",
-      "dN3/ds = 0.25*Z + 0.25\n",
-      "dN4/ds = -0.25*Z - 0.25\n",
-      "dN1/dt = 0.25*R - 0.25\n",
-      "dN2/dt = -0.25*R - 0.25\n",
-      "dN3/dt = 0.25*R + 0.25\n",
-      "dN4/dt = 0.25 - 0.25*R\n",
+      "dN1/ds = -1\n",
+      "dN2/ds = 1\n",
+      "dN3/ds = 0\n",
+      "dN1/dt = -1\n",
+      "dN2/dt = 0\n",
+      "dN3/dt = 1\n",
       "\n",
       "The isoparametric mapping is:\n",
-      "x = r1*(0.25 - 0.25*R)*(1 - Z) + r2*(1 - Z)*(0.25*R + 0.25) + r3*(0.25*R + 0.25)*(Z + 1) + r4*(0.25 - 0.25*R)*(Z + 1)\n",
-      "y = z1*(0.25 - 0.25*R)*(1 - Z) + z2*(1 - Z)*(0.25*R + 0.25) + z3*(0.25*R + 0.25)*(Z + 1) + z4*(0.25 - 0.25*R)*(Z + 1)\n",
+      "x = R*r2 + Z*r3 + r1*(-R - Z + 1)\n",
+      "y = R*z2 + Z*z3 + z1*(-R - Z + 1)\n",
       "\n",
       "The isoparametric mapping with coordinate values substituted is:\n",
-      "x = 0.1111222225*r1 + 0.2222277775*r2 + 0.4444222225*r3 + 0.2222277775*r4\n",
-      "y = 0.1111222225*z1 + 0.2222277775*z2 + 0.4444222225*z3 + 0.2222277775*z4\n",
+      "x = 0.3334*r1 + 0.3333*r2 + 0.3333*r3\n",
+      "y = 0.3334*z1 + 0.3333*z2 + 0.3333*z3\n",
       "\n",
       "The derivatives of the shape functions by s are:\n",
-      "[0.25*Z - 0.25, 0.25 - 0.25*Z, 0.25*Z + 0.25, -0.25*Z - 0.25]\n",
+      "[-1, 1, 0]\n",
       "\n",
       "The derivatives of the shape functions by t are:\n",
-      "[0.25*R - 0.25, -0.25*R - 0.25, 0.25*R + 0.25, 0.25 - 0.25*R]\n"
+      "[-1, 0, 1]\n"
      ]
     }
    ],
-   "execution_count": 68
+   "execution_count": 41
   },
   {
    "metadata": {},
@@ -339,8 +339,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-27T19:37:25.474699Z",
-     "start_time": "2025-07-27T19:37:25.437469Z"
+     "end_time": "2025-08-02T20:33:56.120509Z",
+     "start_time": "2025-08-02T20:33:56.095070Z"
     }
    },
    "cell_type": "code",
@@ -384,29 +384,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The shape function matrix N is (2, 8):\n",
+      "The shape function matrix N is (2, 6):\n",
       "\n",
       "The shape function matrix N for this element:\n",
-      "⎡(0.25 - 0.25⋅R)⋅(1 - Z)             0             (1 - Z)⋅(0.25⋅R + 0.25)     ↪\n",
-      "⎢                                                                              ↪\n",
-      "⎣           0             (0.25 - 0.25⋅R)⋅(1 - Z)             0             (1 ↪\n",
-      "\n",
-      "↪          0             (0.25⋅R + 0.25)⋅(Z + 1)             0             (0. ↪\n",
-      "↪                                                                              ↪\n",
-      "↪  - Z)⋅(0.25⋅R + 0.25)             0             (0.25⋅R + 0.25)⋅(Z + 1)      ↪\n",
-      "\n",
-      "↪ 25 - 0.25⋅R)⋅(Z + 1)             0           ⎤\n",
-      "↪                                              ⎥\n",
-      "↪         0             (0.25 - 0.25⋅R)⋅(Z + 1)⎦\n",
+      "⎡-R - Z + 1      0       R  0  Z  0⎤\n",
+      "⎢                                  ⎥\n",
+      "⎣    0       -R - Z + 1  0  R  0  Z⎦\n",
       "\n",
       "The shape function matrix N for this element at node 1:\n",
-      "⎡0.207    0    0.283    0    0.2945    0     0.2155    0   ⎤\n",
-      "⎢                                                          ⎥\n",
-      "⎣  0    0.207    0    0.283    0     0.2945    0     0.2155⎦\n"
+      "⎡-2.6667     0     3.3333    0     0.3333    0   ⎤\n",
+      "⎢                                                ⎥\n",
+      "⎣   0     -2.6667    0     3.3333    0     0.3333⎦\n"
      ]
     }
    ],
-   "execution_count": 69
+   "execution_count": 42
   },
   {
    "metadata": {},
@@ -417,8 +409,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-27T19:38:54.414288Z",
-     "start_time": "2025-07-27T19:38:54.391399Z"
+     "end_time": "2025-08-02T20:33:56.186061Z",
+     "start_time": "2025-08-02T20:33:56.166454Z"
     }
    },
    "cell_type": "code",
@@ -445,19 +437,19 @@
     "J = jacobian()\n",
     "\n",
     "# Substitute the symbolic coordinates with numerical values in the Jacobian\n",
-    "J_substituted = J.subs(physical_coords_map)\n",
+    "J_element = J.subs(physical_coords_map)\n",
     "\n",
     "print('The jacobian matrix with coordinate values substituted is:')\n",
-    "sp.pprint(J_substituted)\n",
+    "sp.pprint(J_element)\n",
     "print()\n",
     "\n",
     "# Evaluate the jacobian matrix at some points\n",
     "for r_eval in [0, 0.3333]:\n",
     "    for z_eval in [0, 0.3333]:\n",
-    "        J_evaluated = J_substituted.subs({R: r_eval, Z: z_eval})\n",
+    "        J_evaluated = J_element.subs({R: r_eval, Z: z_eval})\n",
     "        print(f'Jacobian matrix at r={r_eval}, z={z_eval}:')\n",
     "        sp.pprint(J_evaluated)\n",
-    "        print(f'The determinant at this point is |J|={J_evaluated.det():.2g}')\n",
+    "        print(f'The determinant at this point is |J|={J_evaluated.det():.2f}')\n",
     "        print()"
    ],
    "id": "234cd282ee60e02e",
@@ -467,38 +459,38 @@
      "output_type": "stream",
      "text": [
       "The jacobian matrix with coordinate values substituted is:\n",
-      "⎡0.045  3.46944695195361e-18⎤\n",
-      "⎢                           ⎥\n",
-      "⎣  0            0.02        ⎦\n",
+      "⎡1  0⎤\n",
+      "⎢    ⎥\n",
+      "⎣0  1⎦\n",
       "\n",
       "Jacobian matrix at r=0, z=0:\n",
-      "⎡0.045  3.46944695195361e-18⎤\n",
-      "⎢                           ⎥\n",
-      "⎣  0            0.02        ⎦\n",
-      "The determinant at this point is |J|=0.00090\n",
+      "⎡1  0⎤\n",
+      "⎢    ⎥\n",
+      "⎣0  1⎦\n",
+      "The determinant at this point is |J|=1.00\n",
       "\n",
       "Jacobian matrix at r=0, z=0.3333:\n",
-      "⎡0.045  3.46944695195361e-18⎤\n",
-      "⎢                           ⎥\n",
-      "⎣  0            0.02        ⎦\n",
-      "The determinant at this point is |J|=0.00090\n",
+      "⎡1  0⎤\n",
+      "⎢    ⎥\n",
+      "⎣0  1⎦\n",
+      "The determinant at this point is |J|=1.00\n",
       "\n",
       "Jacobian matrix at r=0.3333, z=0:\n",
-      "⎡0.045  3.46944695195361e-18⎤\n",
-      "⎢                           ⎥\n",
-      "⎣  0            0.02        ⎦\n",
-      "The determinant at this point is |J|=0.00090\n",
+      "⎡1  0⎤\n",
+      "⎢    ⎥\n",
+      "⎣0  1⎦\n",
+      "The determinant at this point is |J|=1.00\n",
       "\n",
       "Jacobian matrix at r=0.3333, z=0.3333:\n",
-      "⎡0.045  3.46944695195361e-18⎤\n",
-      "⎢                           ⎥\n",
-      "⎣  0            0.02        ⎦\n",
-      "The determinant at this point is |J|=0.00090\n",
+      "⎡1  0⎤\n",
+      "⎢    ⎥\n",
+      "⎣0  1⎦\n",
+      "The determinant at this point is |J|=1.00\n",
       "\n"
      ]
     }
    ],
-   "execution_count": 77
+   "execution_count": 43
   },
   {
    "metadata": {},
@@ -509,8 +501,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-27T19:38:34.898883Z",
-     "start_time": "2025-07-27T19:38:34.816120Z"
+     "end_time": "2025-08-02T20:33:56.264490Z",
+     "start_time": "2025-08-02T20:33:56.233167Z"
     }
    },
    "cell_type": "code",
@@ -549,8 +541,9 @@
     "\n",
     "# Example of calculating and printing the B matrix\n",
     "B_matrix = calculate_B()\n",
+    "B_element = B_matrix.subs(physical_coords_map)\n",
     "# You can then substitute values as needed\n",
-    "B_evaluated = B_matrix.subs(physical_coords_map).subs({R: 1/3, Z: 1/3})\n",
+    "B_evaluated = B_element.subs({R: 1/3, Z: 1/3})\n",
     "sp.pprint(B_evaluated.evalf().applyfunc(lambda x: round(x, 3)))"
    ],
    "id": "3356c7d2c4a65610",
@@ -559,17 +552,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "⎡-3.704    0      3.704      0     7.407     0     -7.407    0   ⎤\n",
-      "⎢                                                                ⎥\n",
-      "⎢0.654     0      1.307      0     2.614     0     1.307     0   ⎥\n",
-      "⎢                                                                ⎥\n",
-      "⎢  0     -8.333     0     -16.667    0     16.667    0     8.333 ⎥\n",
-      "⎢                                                                ⎥\n",
-      "⎣-8.333  -3.704  -16.667   3.704   16.667  7.407   8.333   -7.407⎦\n"
+      "⎡-1.0   0    1.0   0    0    0 ⎤\n",
+      "⎢                              ⎥\n",
+      "⎢0.1    0    0.1   0   0.1   0 ⎥\n",
+      "⎢                              ⎥\n",
+      "⎢ 0    -1.0   0    0    0   1.0⎥\n",
+      "⎢                              ⎥\n",
+      "⎣-1.0  -1.0   0   1.0  1.0   0 ⎦\n"
      ]
     }
    ],
-   "execution_count": 76
+   "execution_count": 44
   },
   {
    "metadata": {},
@@ -593,8 +586,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-27T19:37:26.322371Z",
-     "start_time": "2025-07-27T19:37:26.295186Z"
+     "end_time": "2025-08-02T20:33:56.329842Z",
+     "start_time": "2025-08-02T20:33:56.307246Z"
     }
    },
    "cell_type": "code",
@@ -644,7 +637,7 @@
      ]
     }
    ],
-   "execution_count": 72
+   "execution_count": 45
   },
   {
    "metadata": {},
@@ -655,8 +648,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-27T19:37:26.514164Z",
-     "start_time": "2025-07-27T19:37:26.502604Z"
+     "end_time": "2025-08-02T20:33:56.379421Z",
+     "start_time": "2025-08-02T20:33:56.369260Z"
     }
    },
    "cell_type": "code",
@@ -706,7 +699,7 @@
    ],
    "id": "921a4b0f9b91c935",
    "outputs": [],
-   "execution_count": 73
+   "execution_count": 46
   },
   {
    "metadata": {},
@@ -717,8 +710,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-27T19:37:28.371229Z",
-     "start_time": "2025-07-27T19:37:26.707505Z"
+     "end_time": "2025-08-02T20:33:56.464581Z",
+     "start_time": "2025-08-02T20:33:56.421199Z"
     }
    },
    "cell_type": "code",
@@ -730,7 +723,7 @@
     "    \"\"\"\n",
     "    K_lok = sp.zeros(NNODE * ND, NNODE * ND)  # initialize the stiffness matrix\n",
     "    J = jacobian()\n",
-    "    J_substituted = J.subs(physical_coords_map)\n",
+    "    # J_substituted = J.subs(physical_coords_map)\n",
     "    D = D_matrix()\n",
     "    r_iso = isoparametric_mapping()[0]  # r(R, Z) mapping\n",
     "\n",
@@ -739,8 +732,8 @@
     "            r_gp, z_gp = p[0], p[1]  # Gauss point in natural coords\n",
     "\n",
     "            # Evaluate B, det(J), and r at the Gauss point\n",
-    "            B_evaluated = B_matrix.subs(physical_coords_map).subs({R: r_gp, Z: z_gp}).evalf()\n",
-    "            J_evaluated = J_substituted.subs({R: r_gp, Z: z_gp}).evalf()\n",
+    "            B_evaluated = B_element.subs({R: r_gp, Z: z_gp}).evalf()\n",
+    "            J_evaluated = J_element.subs({R: r_gp, Z: z_gp}).evalf()\n",
     "            det_J = J_evaluated.det()\n",
     "            r_physical_at_gp = r_iso.subs(physical_coords_map).subs({R: r_gp, Z: z_gp}).evalf()\n",
     "\n",
@@ -757,10 +750,10 @@
     "                w = gi_data[ng]['weight'][i] * gi_data[ng]['weight'][j]\n",
     "\n",
     "                # Calculate the jacobian at the gauss point\n",
-    "                J_evaluated = J_substituted.subs({R: s, Z: t}).evalf()\n",
+    "                J_evaluated = J_element.subs({R: s, Z: t}).evalf()\n",
     "                det_J = J_evaluated.det()\n",
     "                r_physical_at_gp = r_iso.subs(physical_coords_map).subs({R: s, Z: t}).evalf()\n",
-    "                B = B_matrix.subs(physical_coords_map).subs({R: s, Z: t}).evalf()\n",
+    "                B = B_element.subs({R: s, Z: t}).evalf()\n",
     "\n",
     "                # Calculate the stiffness matrix contribution\n",
     "                K_contribution = 2 * sp.pi * B.T * D * B * r_physical_at_gp * det_J * w\n",
@@ -789,33 +782,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[  66.48   38.67   15.46    1.21  -68.82  -38.67  -17.8    -1.21]\n",
-      " [  38.67  155.81  -17.52  139.16  -54.98 -155.81    1.21 -139.16]\n",
-      " [  15.46  -17.52   80.98  -54.98   -3.3    17.52  -68.82   54.98]\n",
-      " [   1.21  139.16  -54.98  155.81  -17.52 -139.16   38.67 -155.81]\n",
-      " [ -68.82  -54.98   -3.3   -17.52   80.98   54.98   15.46   17.52]\n",
-      " [ -38.67 -155.81   17.52 -139.16   54.98  155.81   -1.21  139.16]\n",
-      " [ -17.8     1.21  -68.82   38.67   15.46   -1.21   66.48  -38.67]\n",
-      " [  -1.21 -139.16   54.98 -155.81   17.52  139.16  -38.67  155.81]]\n",
+      "[[ 6822.89  3786.02 -5582.37 -1611.07 -1796.35 -2174.95]\n",
+      " [ 3786.02  7249.83 -2658.27 -1611.07 -1852.73 -5638.76]\n",
+      " [-5582.37 -2658.27  6178.47     0.     298.05  2658.27]\n",
+      " [-1611.07 -1611.07     0.    1611.07  1611.07     0.  ]\n",
+      " [-1796.35 -1852.73   298.05  1611.07  1667.46   241.66]\n",
+      " [-2174.95 -5638.76  2658.27     0.     241.66  5638.76]]\n",
       "\n",
-      "[[  82.4    31.42   -8.53    8.46  -46.41  -42.29  -30.85    2.42]\n",
-      " [  31.42  179.2   -10.27   87.23  -51.35 -103.88   -2.42 -162.56]\n",
-      " [  -8.53  -10.27  116.71  -62.23  -38.16   21.15  -46.41   51.35]\n",
-      " [   8.46   87.23  -62.23  236.3   -21.15 -219.65   42.29 -103.88]\n",
-      " [ -46.41  -51.35  -38.16  -21.15  116.71   62.23   -8.53   10.27]\n",
-      " [ -42.29 -103.88   21.15 -219.65   62.23  236.3    -8.46   87.23]\n",
-      " [ -30.85   -2.42  -46.41   42.29   -8.53   -8.46   82.4   -31.42]\n",
-      " [   2.42 -162.56   51.35 -103.88   10.27   87.23  -31.42  179.2 ]]\n"
+      "[[ 6854.87  3786.02 -5596.94 -1611.07 -1808.89 -2174.95]\n",
+      " [ 3786.02  7249.83 -2658.27 -1611.07 -1852.73 -5638.76]\n",
+      " [-5596.94 -2658.27  6200.32     0.     283.48  2658.27]\n",
+      " [-1611.07 -1611.07     0.    1611.07  1611.07     0.  ]\n",
+      " [-1808.89 -1852.73   283.48  1611.07  1699.43   241.66]\n",
+      " [-2174.95 -5638.76  2658.27     0.     241.66  5638.76]]\n"
      ]
     }
    ],
-   "execution_count": 74
+   "execution_count": 47
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-27T19:37:28.645565Z",
-     "start_time": "2025-07-27T19:37:28.613855Z"
+     "end_time": "2025-08-02T20:33:56.530301Z",
+     "start_time": "2025-08-02T20:33:56.514885Z"
     }
    },
    "cell_type": "code",
@@ -863,16 +852,16 @@
      "text": [
       "Eigenvalues and eigenvectors for the stiffness matrix K_gauss_1pt:\n",
       "one zero mode, multiple spurious modes\n",
-      "The eigenvalues of the stiffness matrix K are: [-0.0, -0.0, 0.0, 0.0, 0.00723, 0.09179, 0.20185, 0.61729]\n",
+      "The eigenvalues of the stiffness matrix K are: [-0.0, 0.0, 0.12521, 4.26197, 6.44429, 18.33701]\n",
       "\n",
       "Eigenvalues and eigenvectors for the stiffness matrix K_gauss_3pt:\n",
       "one zero mode, no spurious mode\n",
-      "The eigenvalues of the stiffness matrix K are: [-0.0, 0.00052, 0.00763, 0.09193, 0.09426, 0.19976, 0.20896, 0.62616]\n",
+      "The eigenvalues of the stiffness matrix K are: [0.0, 0.02158, 0.12664, 4.28319, 6.46501, 18.35786]\n",
       "\n"
      ]
     }
    ],
-   "execution_count": 75
+   "execution_count": 48
   }
  ],
  "metadata": {
