--- a/source/TwoD/Axissymmetric/tri_axissymmetric.ipynb
+++ b/source/TwoD/Axissymmetric/tri_axissymmetric.ipynb
@@ -17,8 +17,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-07-26T14:11:23.499858Z",
-     "start_time": "2025-07-26T14:11:22.808270Z"
+     "end_time": "2025-08-02T20:52:03.009379Z",
+     "start_time": "2025-08-02T20:52:02.998109Z"
     }
    },
    "source": [
@@ -27,7 +27,7 @@
     "sp.init_printing()"
    ],
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 32
   },
   {
    "metadata": {},
@@ -56,8 +56,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-26T14:11:23.888895Z",
-     "start_time": "2025-07-26T14:11:23.877921Z"
+     "end_time": "2025-08-02T20:52:03.077935Z",
+     "start_time": "2025-08-02T20:52:03.069264Z"
     }
    },
    "cell_type": "code",
@@ -92,13 +92,13 @@
    ],
    "id": "52edc126770b2e52",
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 33
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-26T14:11:23.939630Z",
-     "start_time": "2025-07-26T14:11:23.932333Z"
+     "end_time": "2025-08-02T20:52:03.139771Z",
+     "start_time": "2025-08-02T20:52:03.135096Z"
     }
    },
    "cell_type": "code",
@@ -108,7 +108,7 @@
    ],
    "id": "e0746910ae4ae4e9",
    "outputs": [],
-   "execution_count": 3
+   "execution_count": 34
   },
   {
    "metadata": {},
@@ -119,8 +119,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-26T14:11:24.679248Z",
-     "start_time": "2025-07-26T14:11:23.974646Z"
+     "end_time": "2025-08-02T20:52:03.162084Z",
+     "start_time": "2025-08-02T20:52:03.153898Z"
     }
    },
    "cell_type": "code",
@@ -150,7 +150,7 @@
    ],
    "id": "d47a539ba577b9ea",
    "outputs": [],
-   "execution_count": 4
+   "execution_count": 35
   },
   {
    "metadata": {},
@@ -161,8 +161,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-26T14:11:24.802579Z",
-     "start_time": "2025-07-26T14:11:24.717995Z"
+     "end_time": "2025-08-02T20:52:03.296720Z",
+     "start_time": "2025-08-02T20:52:03.278133Z"
     }
    },
    "cell_type": "code",
@@ -190,13 +190,13 @@
      ]
     }
    ],
-   "execution_count": 5
+   "execution_count": 36
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-26T14:11:24.900030Z",
-     "start_time": "2025-07-26T14:11:24.835497Z"
+     "end_time": "2025-08-02T20:52:03.444766Z",
+     "start_time": "2025-08-02T20:52:03.400989Z"
     }
    },
    "cell_type": "code",
@@ -304,7 +304,7 @@
      ]
     }
    ],
-   "execution_count": 6
+   "execution_count": 37
   },
   {
    "metadata": {},
@@ -325,8 +325,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-26T14:11:24.957046Z",
-     "start_time": "2025-07-26T14:11:24.929342Z"
+     "end_time": "2025-08-02T20:52:03.478536Z",
+     "start_time": "2025-08-02T20:52:03.451752Z"
     }
    },
    "cell_type": "code",
@@ -384,7 +384,7 @@
      ]
     }
    ],
-   "execution_count": 7
+   "execution_count": 38
   },
   {
    "metadata": {},
@@ -398,8 +398,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-26T14:11:25.232031Z",
-     "start_time": "2025-07-26T14:11:25.011475Z"
+     "end_time": "2025-08-02T20:52:03.632981Z",
+     "start_time": "2025-08-02T20:52:03.603306Z"
     }
    },
    "cell_type": "code",
@@ -475,7 +475,7 @@
      ]
     }
    ],
-   "execution_count": 8
+   "execution_count": 39
   },
   {
    "metadata": {},
@@ -486,8 +486,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-26T14:11:25.340895Z",
-     "start_time": "2025-07-26T14:11:25.316261Z"
+     "end_time": "2025-08-02T20:52:03.742379Z",
+     "start_time": "2025-08-02T20:52:03.715609Z"
     }
    },
    "cell_type": "code",
@@ -537,7 +537,7 @@
      ]
     }
    ],
-   "execution_count": 9
+   "execution_count": 40
   },
   {
    "metadata": {},
@@ -548,8 +548,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-26T14:11:25.422019Z",
-     "start_time": "2025-07-26T14:11:25.412792Z"
+     "end_time": "2025-08-02T20:52:03.845954Z",
+     "start_time": "2025-08-02T20:52:03.839359Z"
     }
    },
    "cell_type": "code",
@@ -567,7 +567,7 @@
    ],
    "id": "b6bcf4700332a080",
    "outputs": [],
-   "execution_count": 10
+   "execution_count": 41
   },
   {
    "metadata": {},
@@ -578,8 +578,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-26T14:11:25.680440Z",
-     "start_time": "2025-07-26T14:11:25.501371Z"
+     "end_time": "2025-08-02T20:54:24.919161Z",
+     "start_time": "2025-08-02T20:54:24.787225Z"
     }
    },
    "cell_type": "code",
@@ -647,42 +647,52 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time taken to calculate the stiffness matrix by 1 GP integration: 0.06284475326538086\n",
-      "Time taken to calculate the stiffness matrix by 3 GP integration: 0.09726881980895996\n",
+      "1\n",
+      "Gauss point in natural coordinates: (0.3333333333333333, 0.3333333333333333)\n",
+      "Physical coordinates at Gauss point: (3.33333333333333, 0.333333333333333)\n",
+      "Time taken to calculate the stiffness matrix by 1 GP integration: 0.05026602745056152\n",
+      "1\n",
+      "Gauss point in natural coordinates: (0.16666666666666666, 0.16666666666666666)\n",
+      "Physical coordinates at Gauss point: (3.16666666666667, 0.166666666666667)\n",
+      "Gauss point in natural coordinates: (0.6666666666666666, 0.16666666666666666)\n",
+      "Physical coordinates at Gauss point: (3.66666666666667, 0.166666666666667)\n",
+      "Gauss point in natural coordinates: (0.16666666666666666, 0.6666666666666666)\n",
+      "Physical coordinates at Gauss point: (3.16666666666667, 0.666666666666667)\n",
+      "Time taken to calculate the stiffness matrix by 3 GP integration: 0.06101584434509277\n",
       "Stiffness matrix from 1-point Gauss quadrature (K_gauss_1pt):\n",
-      "[[3.411447 1.893011 -2.791184 -0.805537 -0.898173 -1.087474]\n",
-      " [1.893011 3.624915 -1.329135 -0.805537 -0.926367 -2.819378]\n",
-      " [-2.791184 -1.329135 3.089233 0 0.149024 1.329135]\n",
-      " [-0.805537 -0.805537 0 0.805537 0.805537 0]\n",
-      " [-0.898173 -0.926367 0.149024 0.805537 0.833730 0.120830]\n",
-      " [-1.087474 -2.819378 1.329135 0 0.120830 2.819378]]\n",
+      "[[6.822895 3.786022 -5.582368 -1.611073 -1.796347 -2.174949]\n",
+      " [3.786022 7.249829 -2.658271 -1.611073 -1.852734 -5.638756]\n",
+      " [-5.582368 -2.658271 6.178466 0 0.298049 2.658271]\n",
+      " [-1.611073 -1.611073 0 1.611073 1.611073 0]\n",
+      " [-1.796347 -1.852734 0.298049 1.611073 1.667461 0.241661]\n",
+      " [-2.174949 -5.638756 2.658271 0 0.241661 5.638756]]\n",
       "\n",
       "Stiffness matrix from 3-point Gauss quadrature (K_gauss_3pt):\n",
-      "[[3.427433 1.893011 -2.798469 -0.805537 -0.904446 -1.087474]\n",
-      " [1.893011 3.624915 -1.329135 -0.805537 -0.926367 -2.819378]\n",
-      " [-2.798469 -1.329135 3.100160 0 0.141740 1.329135]\n",
-      " [-0.805537 -0.805537 0 0.805537 0.805537 0]\n",
-      " [-0.904446 -0.926367 0.141740 0.805537 0.849716 0.120830]\n",
-      " [-1.087474 -2.819378 1.329135 0 0.120830 2.819378]]\n",
+      "[[6.854866 3.786022 -5.596938 -1.611073 -1.808892 -2.174949]\n",
+      " [3.786022 7.249829 -2.658271 -1.611073 -1.852734 -5.638756]\n",
+      " [-5.596938 -2.658271 6.200319 0 0.283479 2.658271]\n",
+      " [-1.611073 -1.611073 0 1.611073 1.611073 0]\n",
+      " [-1.808892 -1.852734 0.283479 1.611073 1.699432 0.241661]\n",
+      " [-2.174949 -5.638756 2.658271 0 0.241661 5.638756]]\n",
       "\n",
       "Comparison of the two stiffness matrices:\n",
-      "array([[0.9953359, 1.000000, 0.9973968, 1.00000, 0.993064, 1.000000],\n",
-      "       [1.000000, 1.000000, 1.000000, 1.00000, 1.00000, 1.000000],\n",
-      "       [0.9973968, 1.000000, 0.9964753, nan, 1.05139, 1.000000],\n",
-      "       [1.00000, 1.00000, nan, 1.00000, 1.00000, nan],\n",
-      "       [0.993064, 1.00000, 1.05139, 1.00000, 0.981187, 1.00000],\n",
+      "array([[0.9953360, 1.000000, 0.9973968, 1.000000, 0.9930648, 1.000000],\n",
+      "       [1.000000, 1.000000, 1.000000, 1.000000, 1.000000, 1.000000],\n",
+      "       [0.9973968, 1.000000, 0.9964755, nan, 1.05140, 1.000000],\n",
+      "       [1.000000, 1.000000, nan, 1.000000, 1.000000, nan],\n",
+      "       [0.9930648, 1.000000, 1.05140, 1.000000, 0.9811872, 1.00000],\n",
       "       [1.000000, 1.000000, 1.000000, nan, 1.00000, 1.000000]],\n",
       "      dtype=object)\n"
      ]
     }
    ],
-   "execution_count": 11
+   "execution_count": 49
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-26T14:11:29.029716Z",
-     "start_time": "2025-07-26T14:11:25.767655Z"
+     "end_time": "2025-08-02T20:52:07.031856Z",
+     "start_time": "2025-08-02T20:52:04.114704Z"
     }
    },
    "cell_type": "code",
@@ -728,7 +738,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time taken to calculate the stiffness matrix by double integration: 3.1757895946502686\n",
+      "Time taken to calculate the stiffness matrix by double integration: 2.8545587062835693\n",
       "The fully integrated stiffness matrix K is:\n",
       "⎡3.4274    1.893   -2.7986  -0.8055  -0.9043  -1.0875⎤\n",
       "⎢                                                    ⎥\n",
@@ -744,13 +754,13 @@
      ]
     }
    ],
-   "execution_count": 12
+   "execution_count": 43
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-26T14:11:29.196744Z",
-     "start_time": "2025-07-26T14:11:29.107429Z"
+     "end_time": "2025-08-02T20:52:07.190911Z",
+     "start_time": "2025-08-02T20:52:07.117452Z"
     }
    },
    "cell_type": "code",
@@ -803,13 +813,13 @@
      ]
     }
    ],
-   "execution_count": 13
+   "execution_count": 44
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-26T14:11:29.303724Z",
-     "start_time": "2025-07-26T14:11:29.287728Z"
+     "end_time": "2025-08-02T20:52:07.260962Z",
+     "start_time": "2025-08-02T20:52:07.248630Z"
     }
    },
    "cell_type": "code",
@@ -872,7 +882,7 @@
       "The eigenvalues of the stiffness matrix K are: [0.0, 0.01079, 0.06332, 2.1416, 3.2325, 9.17893]\n",
       "\n",
       "Eigenvalues and eigenvectors for the stiffness matrix K_integrated:\n",
-      "The eigenvalues of the stiffness matrix K are: [0.0, 0.01076, 0.06333, 2.14161, 3.23259, 9.17897]\n",
+      "The eigenvalues of the stiffness matrix K are: [-2e-05, 0.01046, 0.06334, 2.14192, 3.23274, 9.17857]\n",
       "\n",
       "[[0.9953359 1.000000 0.9973968 1.00000 0.993064 1.000000]\n",
       " [1.000000 1.000000 1.000000 1.00000 1.00000 1.000000]\n",
@@ -881,23 +891,23 @@
       " [0.993064 1.00000 1.05139 1.00000 0.981187 1.00000]\n",
       " [1.000000 1.000000 1.000000 nan 1.00000 1.000000]]\n",
       "\n",
-      "[[0.9953408 1.000000 0.9973587 1.00000 0.993240 1.000000]\n",
-      " [1.000000 1.000000 1.000000 1.00000 1.00000 1.000000]\n",
-      " [0.9973587 1.000000 0.9964236 nan 1.05219 1.000000]\n",
-      " [1.00000 1.00000 nan 1.00000 1.00000 nan]\n",
-      " [0.993240 1.00000 1.05219 1.00000 0.981206 1.00000]\n",
-      " [1.000000 1.000000 1.000000 nan 1.00000 1.000000]]\n",
+      "[[0.9954611 1.000003 0.9972036 0.999388 0.993496 1.000431]\n",
+      " [1.000003 0.9999766 1.000106 0.999388 1.00037 1.000134]\n",
+      " [0.9972036 1.000106 0.9965248 nan 1.04948 1.000106]\n",
+      " [0.999388 0.999388 nan 0.999388 0.999388 nan]\n",
+      " [0.993496 1.00037 1.04948 0.999388 0.980887 0.998577]\n",
+      " [1.000431 1.000134 1.000106 nan 0.998577 1.000134]]\n",
       "\n",
-      "[[1.000005 1.000000 0.9999618 1.00000 1.00018 1.000000]\n",
-      " [1.000000 1.000000 1.000000 1.00000 1.00000 1.000000]\n",
-      " [0.9999618 1.000000 0.9999481 nan 1.00076 1.000000]\n",
-      " [1.00000 1.00000 nan 1.00000 1.00000 nan]\n",
-      " [1.00018 1.00000 1.00076 1.00000 1.00002 1.00000]\n",
-      " [1.000000 1.000000 1.000000 nan 1.00000 1.000000]]\n"
+      "[[1.000126 1.000003 0.9998063 0.999388 1.00044 1.000431]\n",
+      " [1.000003 0.9999766 1.000106 0.999388 1.00037 1.000134]\n",
+      " [0.9998063 1.000106 1.000050 nan 0.998181 1.000106]\n",
+      " [0.999388 0.999388 nan 0.999388 0.999388 nan]\n",
+      " [1.00044 1.00037 0.998181 0.999388 0.999695 0.998577]\n",
+      " [1.000431 1.000134 1.000106 nan 0.998577 1.000134]]\n"
      ]
     }
    ],
-   "execution_count": 14
+   "execution_count": 45
   }
  ],
  "metadata": {
